# toy-redis-server

./: .gitignore  README.md  codecrafters.yml  main.py  pyproject.toml  spawn_redis_server.sh
app/: command_handler.py  commands.py  config.py  database.py  exceptions.py  main.py  rdb_file.py  redis_config.py  replication_manager.py  server.py  storage.py
app/rdb/: constants.py  data_loading.py  helpers.py  parser.py
app/resp/: decoder.py
app/server/: handlers.py  master.py  replica.py
tests/: conftest.py  test_bind.py  test_echo.py
toy_redis_server/: data_types.py  main.py  storage.py
toy_redis_server/rdb/: constants.py  data_loading.py  parser.py
toy_redis_server/resp/: decoder.py  encoder.py
toy_redis_server/server/: handlers.py  master.py  replica.py  role.py
